fix some edge cases for the expand/collapse cue

--- a/src/styles/features/pathways/tooltip.css
+++ b/src/styles/features/pathways/tooltip.css
@@ -131,4 +131,5 @@
 
 .expand-collapse-cue {
   cursor: pointer;
+  font-size: 1.25em;
 }
